<resources>
    <string name="app_name">VendingMachine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goods">商品</string>
    <string name="fetchcode">付款码</string>
    <string name="help">帮助</string>
    <string name="alreadypay_floatview">已投入： 0  元</string>
    <string name="nameandeprice">大虾：100元</string>
    <string name="ce">清除</string>
    <string name="ok">取货</string>
    <string name="please_put_number">请输入取货码</string>
    <string name="testname">极品龙虾</string>
    <string name="testprice">120元</string>
    <string name="back">返回</string>
    <string name="wxpay">微信支付</string>
    <string name="zfbpay">支付宝支付</string>
    <string name="yktpay">一卡通支付</string>
    <string name="xjpay">现金支付</string>
    <string name="jdpay">京东钱包</string>
    <string name="ylpay">银联支付</string>
    <string name="tiamer">倒计时</string>
    <string name="helpInfo">
        中华全国供销合作总社北京商业机械研究所于1978年经国务院国科发字［1978］356号文批准成立，位于北京市丰台区总部基地，是直属于中华全国供销合作总社的国家级科研院所，下属单位有北京中合金诺认证中心有限公司和北京中合智盛有限公司。
        北京商业机械研究所围绕“农产品标准化”和“农产品信息追溯”应用中的关键性技术问题，致力于开发一套符合农产品标准与信息查询服务的系统平台，以信息化与互联网技术推动供销合作社传统业务的“智慧化”升级, 力求突出特色，推动“透明云农场”在供销合作社业务领域的应用。有效提高供销合作社为农服务的规模、质量与效率。
        \n\n联系人： 费铮
        \n电     话： 18610056339    010-63611240
        \n邮     箱： 18610056339@126.com
        \n地     址： 北京丰台区总部基地16区3号楼
        \n邮     编： 100071

    </string>


</resources>
