<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sjs.vendingmachine.PayActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.9"
        android:gravity="center"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_goods_pay_name"
                android:layout_height="wrap_content"
                android:layout_width="180dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/colorAccent"
                android:text="@string/testname"
                android:textSize="32dp"
                />
            <TextView
                android:id="@+id/tv_goods_pay_price"
                android:layout_height="wrap_content"
                android:layout_width="180dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/testprice"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
        <ImageView
            android:id="@+id/im_goods_pay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/testimage"/>
        <ImageView
            android:id="@+id/im_goods_erweima"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:src="@mipmap/paytest"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.005"
        android:background="@color/White"
        android:orientation="horizontal"
>
        <LinearLayout
            android:id="@+id/ly_pay_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/Red"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_goods"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:src="@mipmap/ic_back_white_128"
                />
            <TextView
                android:id="@+id/text_goods"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="@color/White"
                android:text="@string/back"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_fetchcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_fetchcode"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/tiamer"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ly_zhbpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_zfbpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_zfbpay_128dp"
                />
            <TextView
                android:id="@+id/text_zfbpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/zfbpay"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_wxpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_wxpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_wxpay_128dp"
                />
            <TextView
                android:id="@+id/text_wxpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/wxpay"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_xjpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_xjpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_xjpay_128dp"
                />
            <TextView
                android:id="@+id/text_xjpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/xjpay"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_yktpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_yktpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_yktpay_128dp"
                />
            <TextView
                android:id="@+id/text_yktpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/yktpay"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ly_ylpay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_ylpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_ylpay_128dp"
                />
            <TextView
                android:id="@+id/text_ylpay"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/ylpay"
                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
