<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context="com.example.sjs.vendingmachine.MainActivity"
    android:orientation="vertical">

         <LinearLayout
            android:id="@+id/tb"
             android:layout_weight="0.995"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gray"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:id="@+id/bottom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.005"
            android:background="@color/White"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/ly_goods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@color/White"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="vertical">
                        <ImageView
                            android:id="@+id/image_goods"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_width="wrap_content"
                            android:src="@mipmap/ic_goods_red_200dp"
                            />
                        <TextView
                            android:id="@+id/text_goods"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/goods"
                            />
                        </LinearLayout>

            <LinearLayout
                android:id="@+id/ly_fetchcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/White"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_fetchcode"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_fetchcode_black_200"
                    />
                <TextView
                    android:id="@+id/text_fetchcode"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/fetchcode"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ly_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="@color/White"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/image_help"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_help_black_200dp"
                    />
                <TextView
                    android:id="@+id/text_help"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/help"
                    />
            </LinearLayout>

        </LinearLayout>

        <!--<com.ashokvarma.bottomnavigation.BottomNavigationBar-->
            <!--android:id="@+id/bottom_navigation_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_height="wrap_content"/>-->

</LinearLayout>
